# hedonic-game

./: .gitignore  README.md  app.py  cluster.json  compare.py  coopgametheoryclustering4Sept.sws  fig1_plot.py  graph.tex  hedonic.ipynb  hedonic.py  index.html  main.py  partition_igraph.py  players.py  plot.ipynb  plot_results.py  pyproject.toml  requirements.txt  run_experiments.py  sample_2.csv
.ipynb_checkpoints/: coopgametheoryclustering4Sept-checkpoint.ipynb  hedonic-checkpoint.ipynb
datasets/: README.md  dolphins.csv  football.csv  sample_2.csv  terrorists.csv
docs/: OIDC_SETUP.md
experiments/: 10K_0.95_GRE_r0.5_i3572_v50.50_e25.30_abs0.09.pickle  10K_0.95_PIQ_r0.5_i7865_v49.50_e24.30_abs0.08.pickle  10K_0.95_SEQ_r0.5_i6577_v50.50_e25.30_abs0.08.pickle  10K_0.95_SEQ_r0.5_i6962_v50.50_e25.30_abs0.1.pickle  10K_0.95_STO_r0.5_i7082_v49.50_e24.30_abs0.09.pickle  10K_0.95_STO_r0.5_i7675_v49.50_e24.31_abs0.09.pickle  1K_0.95_GRE_r0.5_i336_v49.50_e24.30_abs0.78.pickle  1K_0.95_GRE_r0.5_i384_v51.50_e26.31_abs0.85.pickle  1K_0.95_PIQ_r0.5_i803_v51.50_e26.30_abs0.82.pickle  1K_0.95_PIQ_r0.5_i893_v51.50_e26.30_abs0.89.pickle  1K_0.95_SEQ_r0.5_i608_v48.50_e24.31_abs0.83.pickle  1K_0.95_SEQ_r0.5_i688_v47.50_e22.30_abs1.04.pickle  1K_0.95_STO_r0.5_i697_v48.50_e23.30_abs0.91.pickle  1K_0.95_STO_r0.5_i753_v52.50_e27.31_abs1.02.pickle  2TR_0.95_GRE_r0.5_i1_v33.50_e14.42_abs111.32.pickle  2TR_0.95_GRE_r0.5_i1_v71.57_e50.50_abs71.56.pickle  2TR_0.95_GRE_r0.5_i2_v83.50_e57.42_abs105.45.pickle  2TR_0.95_GRE_r0.5_i3_v42.57_e12.50_abs76.34.pickle  (+68 more)
libs/: Game.py  convert.py  (+4 more)
(+278 files in other folders)
