[project]
name = "hedonic"
version = "0.0.6"
description = "A Python library for hedonic games"
readme = "README.md"
authors = [
    { name = "Lucas Lopes Felipe" }
]
requires-python = ">=3.12"
dependencies = ["lucas-igraph==0.11.9"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
